<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_period1"
            android:title="@string/menu_period1" />
        <item
            android:id="@+id/nav_period2"
            android:title="@string/menu_period2" />
        <item
            android:id="@+id/nav_period3"
            android:title="@string/menu_period3" />
        <item
            android:id="@+id/nav_period4"
            android:title="@string/menu_period4" />
        <item
            android:id="@+id/nav_period5"
            android:title="@string/menu_period5" />
        <item
            android:id="@+id/nav_period6"
            android:title="@string/menu_period6" />
    </group>
</menu>