<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navigation_subjects.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_period1"
        android:name="com.example.navigation_subjects.ui.period1.Period1Fragment"
        android:label="@string/menu_period1"
        tools:layout="@layout/fragment_period" />
    <fragment
        android:id="@+id/nav_period2"
        android:name="com.example.navigation_subjects.ui.period2.Period2Fragment"
        android:label="@string/menu_period2"
        tools:layout="@layout/fragment_period" />

    <fragment
        android:id="@+id/nav_period3"
        android:name="com.example.navigation_subjects.ui.period3.Period3Fragment"
        android:label="@string/menu_period3"
        tools:layout="@layout/fragment_period" />
    <fragment
        android:id="@+id/nav_period4"
        android:name="com.example.navigation_subjects.ui.period4.Period4Fragment"
        android:label="@string/menu_period4"
        tools:layout="@layout/fragment_period" />

    <fragment
        android:id="@+id/nav_period5"
        android:name="com.example.navigation_subjects.ui.period5.Period5Fragment"
        android:label="@string/menu_period5"
        tools:layout="@layout/fragment_period" />

    <fragment
        android:id="@+id/nav_period6"
        android:name="com.example.navigation_subjects.ui.period6.Period6Fragment"
        android:label="@string/menu_period6"
        tools:layout="@layout/fragment_period" />

</navigation>